# TOKENICODE

./: .agent-log  .env.example  .gitignore  .session-id  ARCHITECTURE.md  CHANGELOG.md  CHANGES_0.5.5.md  CLAUDE.md  LICENSE  PLAN.md  README.md  README_ja.md  README_zh.md  WINDOWS_TEST_CHECKLIST.md  index.html  latest-alpha-gitee.json  latest-alpha.json  latest-gitee.json  latest.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/agents/: dispatch.md  review.md
.claude/hooks/: inject-subagent-context.py
.github/workflows/: release.yml
.test/: BRANCH-VALIDATION.md  CLI-TEST-TOOL.md  README.md
.test/scripts/: analyze-reports.py  run-all-phases.sh  run-branch-validation.sh  run-e2e.sh
bug-reports/: bugs.json
docs/: auto-compact-feasibility.md  bug-report-feishu-bitable.md  chat-flow-interaction-audit.md  claudecli-local-deploy-audit.md  cli-mode-parity-audit.md  file-management-audit.md  install-api-audit.md  landing.html  permission-approval-redesign.md  rewind-slash-audit.md  豆包大模型流式语音识别API文档 .md
release-artifacts/: TOKENICODE.app.tar.gz.sig  TOKENICODE_0.8.23_x64-setup.exe.sig  latest-gitee.json  latest.json
scripts/: build-macos-local.sh  build-windows-local.sh  run-tests.mjs  sync-mirror-from-gcs.sh  tokenicode-cli.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/en.lproj/: InfoPlist.strings
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: env_manager.rs  events.rs  lib.rs  main.rs  path_access.rs  protocol.rs  windows_ps.rs
src-tauri/src/commands/: claude_process.rs  cli_resolver.rs  feedback.rs  mod.rs
src/__tests__/: diagnosis-stdinId-guard.test.ts  diagnosis-thinkingLevel-watcher.test.ts  diagnosis-watchdog-listener.test.ts  finalizeOnce.test.ts  model-context-routing.test.ts  session-sync.test.ts  (+5 more)
(+152 files in other folders)
