[package]
name = "tokenicode"
version = "0.6.11"
description = "TOKENICODE - A beautiful GUI for Claude Code"
authors = ["TinyZ"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "tokenicode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
base64 = "0.22"
serde_yaml = "0.9"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hostname = "0.4"
trash = "5"
flate2 = "1"
tar = "0.4"
zip = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
